/*
 * ============LICENSE_START=============================================================================================================
 * Copyright (c) 2020 <rakeshgirijaramesannair>
 * ===================================================================
 * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at
 *
 *        http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS
 * OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 * ============LICENSE_END===============================================================================================================
 *
 */


package org.onap.nbi.apis.servicecatalog.model;


/**
 * Service distribution status from ONAP.
 *
 */

public enum DistributionStatus {
  
  DISTRIBUTION_NOT_APPROVED("DISTRIBUTION_NOT_APPROVED"),
  
  DISTRIBUTION_APPROVED("DISTRIBUTION_APPROVED"),
  
  DISTRIBUTED("DISTRIBUTED"),
  
  DISTRIBUTION_REJECTED("DISTRIBUTION_REJECTED");

  private String value;

  DistributionStatus(String value) {
    this.value = value;
  }

  public String getValue() {
    return value;
  }

}

