/**
 *     Copyright (c) 2018 Orange
 *
 *     Licensed under the Apache License, Version 2.0 (the "License");
 *     you may not use this file except in compliance with the License.
 *     You may obtain a copy of the License at
 *
 *         http://www.apache.org/licenses/LICENSE-2.0
 *
 *     Unless required by applicable law or agreed to in writing, software
 *     distributed under the License is distributed on an "AS IS" BASIS,
 *     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *     See the License for the specific language governing permissions and
 *     limitations under the License.
 */
/*
 * API ServiceOrder serviceOrder API designed for ONAP Beijing Release. This API is build from TMF
 * open API16.5 + applied TMF guideline 3.0
 *
 * OpenAPI spec version: 0.1.1_inProgress
 * 
 *
 * NOTE: This class is auto generated by the swagger code generator program.
 * https://github.com/swagger-api/swagger-codegen.git Do not edit the class manually.
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
 * in compliance with the License. You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under the License
 * is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
 * or implied. See the License for the specific language governing permissions and limitations under
 * the License.
 */


package org.onap.nbi.apis.serviceorder.model;

import com.fasterxml.jackson.annotation.JsonProperty;
import io.swagger.annotations.ApiModel;
import io.swagger.annotations.ApiModelProperty;
import javax.validation.constraints.NotNull;
import java.util.Objects;

/**
 *
 */
@ApiModel(description = "")
@javax.annotation.Generated(value = "io.swagger.codegen.languages.JavaJerseyServerCodegen",
        date = "2018-02-19T14:00:30.767Z")
public class ErrorRepresentation {
    @JsonProperty("code")
    private Integer code = null;

    @JsonProperty("reason")
    private String reason = null;

    @JsonProperty("message")
    private String message = null;

    @JsonProperty("status")
    private String status = null;

    @JsonProperty("referenceError")
    private String referenceError = null;

    @JsonProperty("@type")
    private String type = null;

    @JsonProperty("@schemaLocation")
    private String schemaLocation = null;

    public ErrorRepresentation code(Integer code) {
        this.code = code;
        return this;
    }

    /**
     * Application related code (as defined in the API or from a common list)
     *
     * @return code
     **/
    @JsonProperty("code")
    @ApiModelProperty(required = true, value = "Application related code (as defined in the API or from a common list)")
    @NotNull
    public Integer getCode() {
        return code;
    }

    public void setCode(Integer code) {
        this.code = code;
    }

    public ErrorRepresentation reason(String reason) {
        this.reason = reason;
        return this;
    }

    /**
     * Text that explains the reason for error. This can be shown to a client user.
     *
     * @return reason
     **/
    @JsonProperty("reason")
    @ApiModelProperty(required = true,
            value = "Text that explains the reason for error. This can be shown to a client user.")
    @NotNull
    public String getReason() {
        return reason;
    }

    public void setReason(String reason) {
        this.reason = reason;
    }

    public ErrorRepresentation message(String message) {
        this.message = message;
        return this;
    }

    /**
     * Text that provide more details and corrective actions related to the error. This can be shown
     * to a client user
     *
     * @return message
     **/
    @JsonProperty("message")
    @ApiModelProperty(
            value = "Text that provide more details and corrective actions related to the error. This can be shown to a client user")
    public String getMessage() {
        return message;
    }

    public void setMessage(String message) {
        this.message = message;
    }

    public ErrorRepresentation status(String status) {
        this.status = status;
        return this;
    }

    /**
     * http error code extension like 400-2
     *
     * @return status
     **/
    @JsonProperty("status")
    @ApiModelProperty(value = "http error code extension like 400-2")
    public String getStatus() {
        return status;
    }

    public void setStatus(String status) {
        this.status = status;
    }

    public ErrorRepresentation referenceError(String referenceError) {
        this.referenceError = referenceError;
        return this;
    }

    /**
     * url pointing to documentation describing the error
     *
     * @return referenceError
     **/
    @JsonProperty("referenceError")
    @ApiModelProperty(value = "url pointing to documentation describing the error")
    public String getReferenceError() {
        return referenceError;
    }

    public void setReferenceError(String referenceError) {
        this.referenceError = referenceError;
    }

    public ErrorRepresentation type(String type) {
        this.type = type;
        return this;
    }

    /**
     * The class type of a REST resource
     *
     * @return type
     **/
    @JsonProperty("@type")
    @ApiModelProperty(value = "The class type of a REST resource")
    public String getType() {
        return type;
    }

    public void setType(String type) {
        this.type = type;
    }

    public ErrorRepresentation schemaLocation(String schemaLocation) {
        this.schemaLocation = schemaLocation;
        return this;
    }

    /**
     * it provides a link to the schema describing a REST resource
     *
     * @return schemaLocation
     **/
    @JsonProperty("@schemaLocation")
    @ApiModelProperty(value = "it provides a link to the schema describing a REST resource")
    public String getSchemaLocation() {
        return schemaLocation;
    }

    public void setSchemaLocation(String schemaLocation) {
        this.schemaLocation = schemaLocation;
    }


    @Override
    public boolean equals(java.lang.Object o) {
        if (this == o) {
            return true;
        }
        if (o == null || getClass() != o.getClass()) {
            return false;
        }
        ErrorRepresentation errorRepresentation = (ErrorRepresentation) o;
        return Objects.equals(this.code, errorRepresentation.code)
                && Objects.equals(this.reason, errorRepresentation.reason)
                && Objects.equals(this.message, errorRepresentation.message)
                && Objects.equals(this.status, errorRepresentation.status)
                && Objects.equals(this.referenceError, errorRepresentation.referenceError)
                && Objects.equals(this.type, errorRepresentation.type)
                && Objects.equals(this.schemaLocation, errorRepresentation.schemaLocation);
    }

    @Override
    public int hashCode() {
        return Objects.hash(code, reason, message, status, referenceError, type, schemaLocation);
    }


    @Override
    public String toString() {
        StringBuilder sb = new StringBuilder();
        sb.append("class ErrorRepresentation {\n");

        sb.append("    code: ").append(toIndentedString(code)).append("\n");
        sb.append("    reason: ").append(toIndentedString(reason)).append("\n");
        sb.append("    message: ").append(toIndentedString(message)).append("\n");
        sb.append("    status: ").append(toIndentedString(status)).append("\n");
        sb.append("    referenceError: ").append(toIndentedString(referenceError)).append("\n");
        sb.append("    type: ").append(toIndentedString(type)).append("\n");
        sb.append("    schemaLocation: ").append(toIndentedString(schemaLocation)).append("\n");
        sb.append("}");
        return sb.toString();
    }

    /**
     * Convert the given object to string with each line indented by 4 spaces (except the first
     * line).
     */
    private String toIndentedString(java.lang.Object o) {
        if (o == null) {
            return "null";
        }
        return o.toString().replace("\n", "\n    ");
    }
}

